Fixes build error with java version